replaced Deques to Lists